// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack \`dynamic-import\` should produce expected output: Asset file should match snapshot 1`] = `"{\\"dependencies\\":[\\"lodash\\",\\"wp-blob\\"],\\"version\\":\\"3bafd7358340331fd0c5c21f3f44f76e\\"}"`;

exports[`Webpack \`dynamic-import\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "this",
    "request": Object {
      "this": Array [
        "wp",
        "blob",
      ],
    },
    "userRequest": "@wordpress/blob",
  },
  Object {
    "externalType": "this",
    "request": Object {
      "this": "lodash",
    },
    "userRequest": "lodash",
  },
]
`;

exports[`Webpack \`function-output-filename\` should produce expected output: Asset file should match snapshot 1`] = `"{\\"dependencies\\":[\\"lodash\\",\\"wp-blob\\"],\\"version\\":\\"63cfdf72e22844c4e01642544c75a571\\"}"`;

exports[`Webpack \`function-output-filename\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "this",
    "request": Object {
      "this": Array [
        "wp",
        "blob",
      ],
    },
    "userRequest": "@wordpress/blob",
  },
  Object {
    "externalType": "this",
    "request": Object {
      "this": "lodash",
    },
    "userRequest": "lodash",
  },
]
`;

exports[`Webpack \`no-default\` should produce expected output: Asset file should match snapshot 1`] = `"{\\"dependencies\\":[],\\"version\\":\\"4def21ff1ab3d47e29e1aacf8bd2a1f4\\"}"`;

exports[`Webpack \`no-default\` should produce expected output: External modules should match snapshot 1`] = `Array []`;

exports[`Webpack \`no-deps\` should produce expected output: Asset file should match snapshot 1`] = `"{\\"dependencies\\":[],\\"version\\":\\"1ca5da751210847d1fe4bd5831ffd29a\\"}"`;

exports[`Webpack \`no-deps\` should produce expected output: External modules should match snapshot 1`] = `Array []`;

exports[`Webpack \`output-format-php\` should produce expected output: Asset file should match snapshot 1`] = `"<?php return array('dependencies' => array('lodash'), 'version' => '24a5cf4a92b121c1709114ecf54db6b6');"`;

exports[`Webpack \`output-format-php\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "this",
    "request": Object {
      "this": "lodash",
    },
    "userRequest": "lodash",
  },
]
`;

exports[`Webpack \`overrides\` should produce expected output: Asset file should match snapshot 1`] = `"{\\"dependencies\\":[\\"wp-blob\\",\\"wp-script-handle-for-rxjs\\",\\"wp-url\\"],\\"version\\":\\"8db429b7f1e39c290ed16684ca6819c6\\"}"`;

exports[`Webpack \`overrides\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "this",
    "request": Object {
      "this": Array [
        "wp",
        "blob",
      ],
    },
    "userRequest": "@wordpress/blob",
  },
  Object {
    "externalType": "this",
    "request": Object {
      "this": Array [
        "wp",
        "url",
      ],
    },
    "userRequest": "@wordpress/url",
  },
  Object {
    "externalType": "this",
    "request": Object {
      "this": Array [
        "rxjs",
        "operators",
      ],
    },
    "userRequest": "rxjs/operators",
  },
  Object {
    "externalType": "this",
    "request": Object {
      "this": "rxjs",
    },
    "userRequest": "rxjs",
  },
]
`;

exports[`Webpack \`with-externs\` should produce expected output: Asset file should match snapshot 1`] = `"{\\"dependencies\\":[\\"wp-url\\"],\\"version\\":\\"dd4c2dc50d046ed9d4c063a7ca95702f\\"}"`;

exports[`Webpack \`with-externs\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "var",
    "request": "wp.blob",
    "userRequest": "@wordpress/blob",
  },
  Object {
    "externalType": "this",
    "request": Object {
      "this": Array [
        "wp",
        "url",
      ],
    },
    "userRequest": "@wordpress/url",
  },
  Object {
    "externalType": "var",
    "request": "rxjs.operators",
    "userRequest": "rxjs/operators",
  },
  Object {
    "externalType": "var",
    "request": "rxjs",
    "userRequest": "rxjs",
  },
]
`;

exports[`Webpack \`wordpress\` should produce expected output: Asset file should match snapshot 1`] = `"{\\"dependencies\\":[\\"lodash\\",\\"wp-blob\\"],\\"version\\":\\"14aca98920139a73ab66800dda496e79\\"}"`;

exports[`Webpack \`wordpress\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "this",
    "request": Object {
      "this": Array [
        "wp",
        "blob",
      ],
    },
    "userRequest": "@wordpress/blob",
  },
  Object {
    "externalType": "this",
    "request": Object {
      "this": "lodash",
    },
    "userRequest": "lodash",
  },
]
`;

exports[`Webpack \`wordpress-require\` should produce expected output: Asset file should match snapshot 1`] = `"{\\"dependencies\\":[\\"lodash\\",\\"wp-blob\\"],\\"version\\":\\"34be485f04528be9581e8a782e8ceb8c\\"}"`;

exports[`Webpack \`wordpress-require\` should produce expected output: External modules should match snapshot 1`] = `
Array [
  Object {
    "externalType": "this",
    "request": Object {
      "this": Array [
        "wp",
        "blob",
      ],
    },
    "userRequest": "@wordpress/blob",
  },
  Object {
    "externalType": "this",
    "request": Object {
      "this": "lodash",
    },
    "userRequest": "lodash",
  },
]
`;
